objects/Invalid_State_County__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decline_Error_Message__c</fullName>
        <label>Decline Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason_Type__c</fullName>
        <label>Loss Reason Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Type__c</fullName>
        <label>Loss Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Invalid State/County</label>
    <pluralLabel>Invalid State/County</pluralLabel>
</CustomObject>